# top_2_quad_WS

devel/: .catkin  .rosinstall
devel/include/simulatore_drone/: my_message.h
devel/include/top_2_quad/: my_message.h
src/top_2_quad/: CMakeLists.txt  CMakeLists.txt.user.f06ca73  manifest.json  package.xml  simulatore
src/top_2_quad/include/orienteering/: OP.hh  Path.hh  Point.hh  utils.hh
src/top_2_quad/include/simulatore_drone/: Corners.h  Drone.h  Greedy.h  Reader.hh  Target.h  common_resources.h  support_methods.h  support_types.h
src/top_2_quad/launch/: simulatore.launch
src/top_2_quad/msg/: my_message.msg
src/top_2_quad/src/: Corners.cpp  Drone.cpp  Greedy.cpp  Reader.cpp  Target.cpp  simulatore.cpp
src/top_2_quad/src/orienteering/: OP.cc  Path.cc  Point.cc
